<resources>
    <string name="activity_land">Account - Land</string>
    <string name="activity_login">Account - Login</string>
    <string name="activity_main">Account - Main</string>
    <string name="app_name">Account</string>
    <string name="check_credentials">Check your credentials</string>
    <string name="layout_land">Land Layout</string>
    <string name="layout_login">Login Layout</string>
    <string name="layout_main">Main Layout</string>
    <string name="login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="logout">Logout</string>
    <string name="token_ko">Token KO</string>
    <string name="token_no">Token NO</string>
    <string name="token_ok">Token OK</string>
</resources>
