<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bones.arko.account.LoginActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/layout_login"
        android:textSize="32sp"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/user_edit_text"
        android:imeActionLabel="@string/login_username"
        android:hint="@string/login_username"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/pass_edit_text"
        android:imeActionLabel="@string/login_password"
        android:hint="@string/login_password"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/user_edit_text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="280dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
